0.17

- Fixed test failures on system where /etc/localtime is not a symlink.
Diagnosed by Iain Truskett.


0.16     2003-05-07

- Fixed a bug where a POSIX time zone in $ENV{TZ} could cause the code
to try to load a module named something like
"DateTime::TimeZone::5.0::03".

- The feature which attempts to read /etc/localtime to determine the
time zone was broken.  Reported by John Siracusa.


0.15     2003-05-05

- Fixed some bugs in calculations of offsets for future datetimes
could be incorrect.  This also quiets some warnings from DateTime.pm's
time zone tests.


0.14     2003-05-05

- Make sure tests always run with warnings on.

- The were major bugs in handling time zones where the second to last
observance had "infinite" rules (rules where the "TO" field is "max")
and the last observance did not specify rules.  An example of this is
America/Belem.

- Fixed a bug in the generated time zone code that caused it to do
more work than it should when calculting offsets for future datetimes.


0.13     2003-05-03

- Fixed DateTime::TimeZone::OffsetOnly constructor so that it only
accepts valid offsets.  Previously, invalid offsets like "foo" were
turned into zero internally.

- Made "local" look for /etc/localtime symlink as part of determining
local time zone.

- Added a links() function to DateTime::TimeZone.

- Included all the links from Olson db file named backwards, which
includes things like "US/Central".

- When searching for the current offset based on the local time, we
now prefer the later of the two offsets rather than the earlier.
Otherwise, offset shifts larger than a day can cause some very strange
problems when doing date math.

- DateTime::TimeZone::OffsetOnly objects now return the offset in
string form when their name() or short_name_for_datetime() methods are
called.  Suggested by Rick Measham.


0.12     2003-04-12

- Updated to latest Olson database (2003a).

- Fixed a bug in handling time zones with only one historical offset,